Align Courses/Tutorials tables: fixed 14rem first column; rename courses to Course 1-4

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -73,7 +73,8 @@ table.cttir-toc th {
 table.cttir-toc td:first-child {
   white-space: nowrap;
   font-weight: 600;
-  width: 1%;
+  width: 14rem;
+  min-width: 14rem;
 }
 table.cttir-toc td:last-child {
   padding-right: 0;
